Name and photo activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
             android:name=".EditCourseActivity"
             android:exported="false" />
         <activity
-            android:name=".AddCourseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PictureActivity"
-            android:exported="false" />
-        <activity
             android:name=".NameActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PhotoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CourseActivity"
             android:exported="false" />
         <activity
             android:name=".BluetoothActivity"
