Restructured Project Structure hierarch, Started comment templates on each activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BirdsOfAFeather">
         <activity
+            android:name=".CourseActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EditCourseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddCourseActivity"
             android:exported="false" />
         <activity
             android:name=".PictureActivity"
