--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.+'
+    testImplementation 'org.robolectric:robolectric:4.6'
+    testImplementation 'androidx.test:core:1.2.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-common:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
