--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.code.gson:gson:2.9.0'
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha03'
     def room_version="2.4.1"
 
